fix: Ajuste de repositorio para adaptar a lineamientos
